# advent-of-code-2021

./: .gitattributes  .gitignore  24-test  README.md  advent.cabal  cabal.project.local  default.nix  shell.nix
2021/: .envrc  advent.cabal
2021/input/: 20
2021/src/: Ad01.hs  Ad02.hs  Ad03.hs  Ad08.hs  Ad09.hs  Ad11.hs  Ad14.hs  Ad16.hs  Ad20.hs  Ad22.hs  Ad23.hs  Ad25.hs  Bench.hs
haskell/: advent.cabal  default.nix  shell.nix
haskell/lib/: Ad01.hs  Ad02.hs  Ad03.hs  Ad04.hs  Ad05.hs  Ad06.hs  Ad07.hs  Ad08.hs  Ad09.hs  Ad10.hs  Ad11.hs  Ad12.hs  Ad13.hs  Ad14.hs  Ad15.hs
haskell/nix/: sources.json
haskell/src/: Ad06.hs  Ad07.hs  Ad14.hs  Ad15.hs  Main.hs
input/: 23Part2  24
nix/: sources.json
src/: Ad01.hs  Ad04.hs  Ad05.hs  Ad06.hs  Ad07.hs  Ad10.hs  Ad11.hs  Ad12.hs  Ad13.hs  Ad15.hs  Ad16.hs  Ad17.hs  Ad18.hs  Ad19.hs  Ad20.hs  Ad21.hs  Ad22.hs  Ad23.hs  Ad23Part2.hs  Ad24.hs  All.hs  Bench.hs  Main.hs
web/: criterion.js  index.xhtml  style.css
