cabal-version:      2.4
name:               advent
version:            0.1.0.0
synopsis:
homepage:
license:            NONE
author:             Owen Shepherd
maintainer:         owen@owen.cafe
extra-source-files: CHANGELOG.md

executable advent-exe
    main-is:          Main.hs
    hs-source-dirs:   src
    build-depends:    base ^>=4.14.1.0
                    , containers
                    , mtl
                    , vector
                    , dlist
                    , criterion-measurement

    other-modules:    Ad01
                    , Ad02
                    , Ad03
                    , Ad04
                    , Ad05
                    , Ad06
                    , Ad07
                    , Ad08
                    , Ad09
                    , Ad10
                    , Ad11
                    , Ad12
                    , Ad13
                    , Ad14
                    , Ad15
                    , Ad16

    ghc-options:      -Wall -O3
    default-language: Haskell2010
