cabal-version:      2.4
name:               advent
version:            0.1.0.0
synopsis:
homepage:
license:            NONE
author:             Owen Shepherd
maintainer:         owen@owen.cafe
extra-source-files: CHANGELOG.md

common shared
    hs-source-dirs:   src
    ghc-options:      -Wall -O3
    default-language: Haskell2010
    build-depends:    base ^>=4.14.1.0
                    , containers
                    , mtl
                    , vector
                    , dlist
                    , criterion
                    , split
                    , hashtables
                    , hashable

    other-modules:    All
                    , Ad01
                    , Ad02
                    , Ad03
                    , Ad04
                    , Ad05
                    , Ad06
                    , Ad07
                    , Ad08
                    , Ad09
                    , Ad10
                    , Ad11
                    , Ad12
                    , Ad13
                    , Ad14
                    , Ad15
                    , Ad16
                    , Ad17
                    , Ad18
                    , Ad19
                    , Ad20
                    , Ad21
                    , Ad22
                    , Ad23
                    , Ad24
                    , Ad25

executable advent-exe
    import:  shared
    main-is: Main.hs

executable advent-bench
    import:  shared
    main-is: Bench.hs
