cabal-version:      2.4
name:               haskell
version:            0.1.0.0
synopsis:
homepage:
license:            NONE
author:             Owen Shepherd
maintainer:         owen@owen.cafe
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   lib
    default-language: Haskell2010

executable haskell
    main-is:          Main.hs
    hs-source-dirs:   src
    build-depends:
        base ^>=4.14.1.0,
        haskell

    default-language: Haskell2010

test-suite haskell-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.1.0
