cabal-version:      2.4
name:               advent
version:            0.1.0.0
synopsis:
homepage:
license:            NONE
author:             Owen Shepherd
maintainer:         owen@owen.cafe
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Ad01
                    , Ad02
                    , Ad03
                    , Ad04
                    , Ad05
                    , Ad06
                    , Ad07
                    , Ad08
                    , Ad09
                    , Ad10
                    , Ad11
    build-depends:    base ^>=4.14.1.0
                    , containers
                    , mtl
                    , vector
                    , dlist
    hs-source-dirs:   lib
    default-language: Haskell2010

executable advent-exe
    main-is:          Main.hs
    hs-source-dirs:   src
    build-depends:
        base ^>=4.14.1.0,
        advent

    default-language: Haskell2010

test-suite haskell-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.1.0
